@@ -54,3 +54,4 @@ Initial release
 * Altered the auto-optimise function to only purge every day and rebuilddict every week to avoid db corruption [pyborg.py]
 * Changed the response times again and forced limit of 8 seconds for responses over 40 characters long [pyborg.py]
 * Messed with the purge, save and rebuilddict times again. Now every 4 hours, 2 hours and 3 days respectively [pyborg.py]
+* Added a little protection from the known #nick taught bug... [pyborg.py]
